# fulltoc

./: .gitignore  README  announce.rst  pyproject.toml  setup.cfg  setup.py
docs/: Makefile
docs/source/: conf.py  developers.rst  history.rst  index.rst  install.rst
sphinxcontrib/: fulltoc.py
