[metadata]
name = sphinxcontrib-fulltoc
summary = Include a full table of contents in your Sphinx HTML sidebar
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = http://sphinxcontrib-fulltoc.readthedocs.org
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: Documentation
    Topic :: Utilities
[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
